# snapgene

./: .gitignore  AGENTS.md  README.md  RELEASE_NOTES.md  constraints.txt  plasmidlab_build_backend.py  pyproject.toml
.github/workflows/: ci.yml
build_support/pyinstaller/: plasmidlab.spec
data/features/: common_synthetic_features.json
docs/: agarose-gel.md  architecture.md  feature-annotation.md  file-formats.md  history.md  install.md  orf-translation.md  projects.md  restriction-overhangs.md  sanger-traces.md
examples/: README.md
scripts/: build_all.ps1  build_package.ps1  build_pyinstaller.ps1  check_python.py  common.ps1  generate_checksums.py  generate_icon.py  lint.ps1  lock_requirements.ps1  smoke_release.py  test.ps1
src/plasmidlab/: __init__.py  cli.py
src/plasmidlab/core/: __init__.py  alignment.py  cloning.py  feature_annotation.py  gel.py  models.py  orfs.py  primers.py  restriction.py
src/plasmidlab/data/: __init__.py
src/plasmidlab/data/features/: __init__.py
src/plasmidlab/gui/: __init__.py  frozen_entry.py  gel_widget.py  history_graph_widget.py  main_window.py  plasmid_map_widget.py  sanger_trace_widget.py
src/plasmidlab/history/: __init__.py  graph.py
src/plasmidlab/io/: __init__.py  fasta.py  genbank.py  sanger.py
src/plasmidlab/project/: __init__.py  database.py
src/plasmidlab/render/: __init__.py  agarose_gel.py  plasmid_map.py
src/plasmidlab/resources/: __init__.py
src/plasmidlab/resources/ladders/: 100_bp_dna_ladder.json  1kb_dna_ladder.json  __init__.py
tests/: test_build_backend.py  test_cli.py  test_imports.py  test_python_version_check.py  test_release_scripts.py
tests/core/: test_alignment.py  test_cloning.py  test_feature_annotation.py  test_gel.py  test_history_provenance.py  test_models.py  test_orfs.py  test_primers.py  test_restriction.py
tests/gui/: test_feature_detection_dialog.py  test_gel_widget.py  test_main_window.py  test_plasmid_map_widget.py  test_sanger_trace_widget.py  test_undo_redo_history.py
tests/history/: test_history_graph.py
tests/io/: test_fasta.py  test_genbank.py  test_sanger.py
tests/project/: test_project_database.py
tests/render/: test_agarose_gel.py  test_plasmid_map.py
