[build-system]
requires = ["hatchling>=1.24,<2"]
build-backend = "plasmidlab_build_backend"
backend-path = ["."]

[project]
name = "plasmidlab"
version = "0.1.0"
description = "An independent open-format molecular biology desktop application scaffold."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "PlasmidLab contributors" }
]
keywords = ["molecular-biology", "plasmid", "genbank", "primer-design", "pyside6"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
  "biopython>=1.83,<2",
  "primer3-py>=2.0.0,<3",
  "PySide6>=6.7,<7"
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "hatchling>=1.24,<2",
  "hypothesis>=6.100,<7",
  "pyinstaller>=6.6,<7",
  "pytest>=8.2,<10",
  "pytest-cov>=5.0,<8",
  "ruff>=0.8,<1"
]

[project.urls]
Homepage = "https://example.invalid/plasmidlab"
Repository = "https://example.invalid/plasmidlab.git"

[project.scripts]
plasmidlab = "plasmidlab.cli:main"

[project.gui-scripts]
plasmidlab-gui = "plasmidlab.gui.main_window:main"

[tool.hatch.build]
exclude = [
  "/build",
  "/dist",
  "/.pytest_cache",
  "/.ruff_cache",
  "**/__pycache__",
  "*.py[cod]"
]

[tool.hatch.build.targets.wheel]
# Hatch includes non-Python files under the packaged src/plasmidlab tree, including
# plasmidlab/data/features/*.json.
packages = ["src/plasmidlab"]
artifacts = ["src/plasmidlab/data/features/*.json"]

[tool.hatch.build.targets.sdist]
include = [
  "/assets",
  "/constraints.txt",
  "/docs",
  "/examples",
  "/build_support",
  "/plasmidlab_build_backend.py",
  "/pyproject.toml",
  "/README.md",
  "/scripts",
  "/src",
  "/tests"
]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
packages = ["plasmidlab"]
strict = true
